; ModuleID = '/home/carl/AnghaBench/php-src/ext/phar/extr_phar_object.c_phar_do_404.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/phar/extr_phar_object.c_phar_do_404.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i8*, i32 }

@.str = private unnamed_addr constant [10 x i8] c"text/html\00", align 1
@PHAR_MIME_PHP = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [23 x i8] c"HTTP/1.0 404 Not Found\00", align 1
@SAPI_HEADER_REPLACE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [82 x i8] c"<html>\0A <head>\0A  <title>File Not Found</title>\0A </head>\0A <body>\0A  <h1>404 - File \00", align 1
@.str.3 = private unnamed_addr constant [32 x i8] c"Not Found</h1>\0A </body>\0A</html>\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i64, i8*, i64, i8*, i64)* @phar_do_404 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @phar_do_404(i32* %0, i8* %1, i64 %2, i8* %3, i64 %4, i8* %5, i64 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca %struct.TYPE_3__, align 8
  %16 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i64 %2, i64* %10, align 8
  store i8* %3, i8** %11, align 8
  store i64 %4, i64* %12, align 8
  store i8* %5, i8** %13, align 8
  store i64 %6, i64* %14, align 8
  %17 = bitcast %struct.TYPE_3__* %15 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %17, i8 0, i64 24, i1 false)
  %18 = load i32*, i32** %8, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %39

20:                                               ; preds = %7
  %21 = load i64, i64* %12, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %39

23:                                               ; preds = %20
  %24 = load i32*, i32** %8, align 8
  %25 = load i8*, i8** %11, align 8
  %26 = load i64, i64* %12, align 8
  %27 = call i32* @phar_get_entry_info(i32* %24, i8* %25, i64 %26, i32* null, i32 1)
  store i32* %27, i32** %16, align 8
  %28 = load i32*, i32** %16, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %30, label %38

30:                                               ; preds = %23
  %31 = load i32*, i32** %8, align 8
  %32 = load i32*, i32** %16, align 8
  %33 = load i32, i32* @PHAR_MIME_PHP, align 4
  %34 = load i8*, i8** %11, align 8
  %35 = load i64, i64* %12, align 8
  %36 = load i8*, i8** %9, align 8
  %37 = call i32 @phar_file_action(i32* %31, i32* %32, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %33, i8* %34, i64 %35, i8* %36, i32* null, i32* null, i32 0)
  br label %48

38:                                               ; preds = %23
  br label %39

39:                                               ; preds = %38, %20, %7
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  store i32 404, i32* %40, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  store i32 22, i32* %41, align 4
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 2
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i8** %42, align 8
  %43 = load i32, i32* @SAPI_HEADER_REPLACE, align 4
  %44 = call i32 @sapi_header_op(i32 %43, %struct.TYPE_3__* %15)
  %45 = call i32 (...) @sapi_send_headers()
  %46 = call i32 @PHPWRITE(i8* getelementptr inbounds ([82 x i8], [82 x i8]* @.str.2, i64 0, i64 0), i32 81)
  %47 = call i32 @PHPWRITE(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.3, i64 0, i64 0), i32 31)
  br label %48

48:                                               ; preds = %39, %30
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32* @phar_get_entry_info(i32*, i8*, i64, i32*, i32) #2

declare dso_local i32 @phar_file_action(i32*, i32*, i8*, i32, i8*, i64, i8*, i32*, i32*, i32) #2

declare dso_local i32 @sapi_header_op(i32, %struct.TYPE_3__*) #2

declare dso_local i32 @sapi_send_headers(...) #2

declare dso_local i32 @PHPWRITE(i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
